# libspatialaudio

./: .gitignore  .mailmap  CMakeLists.txt  LICENSE  README.md  toolchain.cmake
.github/workflows/: cmake-multi-platform.yml
cmake/: ambisonic.pc.cmake  pkg-config.pc.cmake  spatialaudio.pc.cmake
cmake/Modules/: FindMySofa.cmake
docs/: AdmAmbisonics.md  AdmBinaural.md  AdmDirectSpeaker.md  AdmObject.md  AdmRendererOverview.md  AmbisonicBinauralization.md  AmbisonicDecoding.md  AmbisonicEncoding.md  AmbisonicOptimisation.md  AmbisonicRotation.md  AmbisonicZoomer.md  AmbisonicsOverview.md  Doxyfile  LoudspeakerBinauralization.md
docs/doxygen/: Doxyfile
docs/latex/: biblio.bib  libspatialaudio_Technical_Report.tex
include/: AdmConversions.h  AdmDecorrelate.h  AdmDirectSpeakerGainCalc.h  AdmLayouts.h  AdmMappingRules.h  AdmMetadata.h  AdmPointSourcePanner.h  AdmPointSourcePannerGainCalc.h  AdmRegionHandlers.h  AdmRenderer.h  AdmUtils.h  AllocentricExtent.h  AllocentricPannerGainCalc.h  AmbisonicAllRAD.h  AmbisonicBase.h  AmbisonicBinauralizer.h  AmbisonicCommons.h  AmbisonicDecoder.h  AmbisonicDecoderPresets.h  AmbisonicEncoder.h  AmbisonicEncoderDist.h  AmbisonicMicrophone.h  AmbisonicOptimFilters.h  AmbisonicProcessor.h  AmbisonicPsychoacousticFilters.h  AmbisonicRotator.h  AmbisonicShelfFilters.h  AmbisonicSource.h  AmbisonicSpeaker.h  AmbisonicTypesDefinesCommons.h  AmbisonicZoomer.h  Ambisonics.h  BFormat.h  Coordinates.h  Decorrelate.h  GainCalculator.h  GainInterp.h  LoudspeakerLayouts.h  PointSourcePannerGainCalc.h  PolarExtent.h  (+12 more)
include/diffuse/: mit_hrtf_diffuse_44100.h  mit_hrtf_diffuse_48000.h  mit_hrtf_diffuse_88200.h  mit_hrtf_diffuse_96000.h
include/dsp/: IIRFilter.h  LinkwitzRileyIIR.h
include/hrtf/: hrtf.h  mit_hrtf.h  sofa_hrtf.h
include/normal/: mit_hrtf_normal_44100.h  mit_hrtf_normal_48000.h  mit_hrtf_normal_88200.h  mit_hrtf_normal_96000.h
mac/amblib.xcodeproj/: project.pbxproj
mac/amblib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
octave/: CalculateMaxReGains.m  FibonacciSphereSampling.m  WeightingFunctionTest.m  cart.m  fibonacciSphere.m  pol.m
octave/AmbisonicDecoding/: ExportTDesignToHeader.m
octave/Export/: matrixToVectorHeader.m
octave/IrregularLayoutDecoders/: DecodersToHeaders.m  SaveWigginsDecoders.m  decodingMatrices_5p0_AmbiX.mat  decodingMatrices_7p0_AmbiX.mat  matrixToHeader.m
octave/LoudspeakerLayoutHulls/: SaveConvexHullsToHeader.m  hullToHeader.m
octave/OptimisationFilters/: PlotShelfFilters.m  filterIRs.mat
octave/SphericalHarmonicRotation/: ComputeRotationMatrixEquations.m  symbolicSphHarmRotMat.m
source/: AdmDecorrelate.cpp  AdmDirectSpeakerGainCalc.cpp  AdmPointSourcePanner.cpp  AdmPointSourcePannerGainCalc.cpp  AdmRegionHandlers.cpp  AdmRenderer.cpp  AllocentricExtent.cpp  AllocentricPannerGainCalc.cpp  AmbisonicAllRAD.cpp  AmbisonicBase.cpp  AmbisonicBase.h  AmbisonicBinauralizer.cpp  AmbisonicCommons.cpp  AmbisonicDecoder.cpp  AmbisonicEncoder.cpp  AmbisonicEncoder.h  AmbisonicEncoderDist.cpp  AmbisonicEncoderDist.h  AmbisonicMicrophone.cpp  AmbisonicOptimFilters.cpp  AmbisonicProcessor.cpp  AmbisonicProcessor.h  AmbisonicRotator.cpp  AmbisonicShelfFilters.cpp  AmbisonicSource.cpp  AmbisonicSource.h  AmbisonicSpeaker.cpp  AmbisonicSpeaker.h  AmbisonicTypesDefinesCommons.h  AmbisonicZoomer.cpp  AmbisonicZoomer.h  Ambisonics.cpp  BFormat.cpp  BFormat.h  Decorrelate.cpp  GainCalculator.cpp  GainInterp.cpp  PointSourcePannerGainCalc.cpp  PolarExtent.cpp  RegionHandlers.cpp  (+5 more)
source/dsp/: IIRFilter.cpp  LinkwitzRileyIIR.cpp
source/hrtf/: mit_hrtf.cpp  sofa_hrtf.cpp
source/kiss_fft/: kiss_fft.h
source/libear/: decorrelate.cpp  decorrelate.hpp
source/libear/kissfft/: kissfft.hh
source/libear/src/direct_speakers/: mapping_rules.cpp  mapping_rules.hpp
win/: amblib.sln  amblib.vcproj
